# SentenceMapper

./: .gitignore  .pre-commit-config.yaml  README.md  THEORY.md  example.ipynb  experiments.ipynb  main.py  pyproject.toml  streamlit_app.py
src/: __init__.py  ab_testing.py  map_reduce_summarizer.py  optimizer.py  pipeline.py  powerlaw_optimizer.py  prompts.py  sentence_processor.py  sentence_splitter.py  sigmoid_optimizer.py  visualization.py
